restando productos de la base de datos

--- a/src/pages/pedidos/pedidos.html
+++ b/src/pages/pedidos/pedidos.html
@@ -197,9 +197,9 @@
       <ion-icon name="jet"></ion-icon>&nbsp;Despachados
     </button>
 
-    <button ion-button color="ok" (click)="entregadosGeneral()">
+  <!--   <button ion-button color="ok" (click)="entregadosGeneral()">
       <ion-icon name="done-all"></ion-icon>&nbsp;Entregados
-    </button>
+    </button> -->
 
     <button ion-button color="ok" (click)="verProductosFaltantesDeBodega()">
       <ion-icon name="cube"></ion-icon>&nbsp;Productos faltantes
